--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -66,6 +66,29 @@ resources.router.routes.productosPage.defaults.module = "default"
 resources.router.routes.productosPage.defaults.controller = "productos"
 resources.router.routes.productosPage.defaults.action = "index"
 
+resources.router.routes.buscarProductos.route = "buscar/:slugBusqueda"
+resources.router.routes.buscarProductos.defaults.module = "default"
+resources.router.routes.buscarProductos.defaults.controller = "buscar"
+resources.router.routes.buscarProductos.defaults.action = "index"
+
+resources.router.routes.buscarProductos1.route = "buscar/page/:page"
+resources.router.routes.buscarProductos1.defaults.module = "default"
+resources.router.routes.buscarProductos1.defaults.controller = "buscar"
+resources.router.routes.buscarProductos1.defaults.action = "index"
+resources.router.routes.buscarProductos1.defaults.slugBusqueda = ""
+
+resources.router.routes.buscarProductos2.route = "buscar/:slugBusqueda/page/:page"
+resources.router.routes.buscarProductos2.defaults.module = "default"
+resources.router.routes.buscarProductos2.defaults.controller = "buscar"
+resources.router.routes.buscarProductos2.defaults.action = "index"
+resources.router.routes.buscarProductos2.defaults.slugBusqueda = ""
+
+resources.router.routes.servicio.route = "servicio/:slugServico"
+resources.router.routes.servicio.defaults.module = "default"
+resources.router.routes.servicio.defaults.controller = "servicio"
+resources.router.routes.servicio.defaults.action = "descripcion-servicio"
+
+
 ;session
 resources.session.cookie_httponly = true ;;XSS
 resources.session.use_only_cookies = true
