--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -88,6 +88,22 @@ resources.router.routes.servicio.defaults.module = "default"
 resources.router.routes.servicio.defaults.controller = "servicio"
 resources.router.routes.servicio.defaults.action = "descripcion-servicio"
 
+resources.router.routes.solucionesCategoria.route = "soluciones/:slugcategoria"
+resources.router.routes.solucionesCategoria.defaults.module = "default"
+resources.router.routes.solucionesCategoria.defaults.controller = "soluciones"
+resources.router.routes.solucionesCategoria.defaults.action = "soluciones-categoria"
+
+resources.router.routes.solucionesDetalle.route = "soluciones/detalle-solucion/:slugSolucion"
+resources.router.routes.solucionesDetalle.defaults.module = "default"
+resources.router.routes.solucionesDetalle.defaults.controller = "soluciones"
+resources.router.routes.solucionesDetalle.defaults.action = "soluciones-detalle"
+
+resources.router.routes.detalleProducto.route = "productos/detalle-producto/:slugProducto"
+resources.router.routes.detalleProducto.defaults.module = "default"
+resources.router.routes.detalleProducto.defaults.controller = "productos"
+resources.router.routes.detalleProducto.defaults.action = "detalle-producto"
+
+
 
 ;session
 resources.session.cookie_httponly = true ;;XSS
