--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -10,12 +10,14 @@ resources.frontController.params.displayExceptions = 0
 resources.frontController.params.prefixDefaultModule = "1"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 
+
 ;;Plugins
 autoloaderNamespaces[] = "CST"
 pluginPaths.CST_Resource = "CST/Application/Resource"
-resources.CST_Application_Resource_Server.urlStatic = /static
-resources.CST_Application_Resource_Server.urlStaticAdmin = /administrador/static
-resources.CST_Application_Resource_Server.urlDinamic = /dinamic
+resources.CST_Application_Resource_Server.urlStatic = "http://69.162.67.243/~alredsof/static"
+resources.CST_Application_Resource_Server.urlStaticAdmin = "http://69.162.67.243/~alredsof/administrador/static"
+resources.CST_Application_Resource_Server.urlDinamic = "http://69.162.67.243/~alredsof/dinamic"
+resources.CST_Application_Resource_Server.baseUrl = "http://69.162.67.243/~alredsof"
 
 ;;db
 resources.multidb.db.adapter=pdo_mysql
@@ -93,6 +95,11 @@ resources.router.routes.solucionesCategoria.defaults.module = "default"
 resources.router.routes.solucionesCategoria.defaults.controller = "soluciones"
 resources.router.routes.solucionesCategoria.defaults.action = "soluciones-categoria"
 
+resources.router.routes.cotizar.route = "cotizar/:slugProducto"
+resources.router.routes.cotizar.defaults.module = "default"
+resources.router.routes.cotizar.defaults.controller = "cotizar"
+resources.router.routes.cotizar.defaults.action = "producto"
+
 resources.router.routes.solucionesDetalle.route = "soluciones/detalle-solucion/:slugSolucion"
 resources.router.routes.solucionesDetalle.defaults.module = "default"
 resources.router.routes.solucionesDetalle.defaults.controller = "soluciones"
@@ -131,3 +138,8 @@ resources.frontController.params.displayExceptions = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+resources.CST_Application_Resource_Server.urlStatic = http://local.iteraz.com/static
+resources.CST_Application_Resource_Server.urlStaticAdmin = http://local.iteraz.com/administrador/static
+resources.CST_Application_Resource_Server.urlDinamic = http://local.iteraz.com/dinamic
+resources.CST_Application_Resource_Server.baseUrl = http://local.iteraz.com
+
