--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -137,6 +137,15 @@ resources.frontController.params.displayExceptions = 1
 [local : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
+
+resources.multidb.db.adapter=pdo_mysql
+resources.multidb.db.host ="localhost"
+resources.multidb.db.username="root"
+resources.multidb.db.password=""
+resources.multidb.db.dbname="itera"
+resources.multidb.db.charset = "utf8"
+resources.multidb.db.default = true 
+
 resources.frontController.params.displayExceptions = 1
 resources.CST_Application_Resource_Server.urlStatic = http://local.iteraz.com/static
 resources.CST_Application_Resource_Server.urlStaticAdmin = http://local.iteraz.com/administrador/static
