--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -100,6 +100,11 @@ resources.router.routes.cotizar.defaults.module = "default"
 resources.router.routes.cotizar.defaults.controller = "cotizar"
 resources.router.routes.cotizar.defaults.action = "producto"
 
+resources.router.routes.cotizardelete.route = "cotizar/delete/:slugProducto"
+resources.router.routes.cotizardelete.defaults.module = "default"
+resources.router.routes.cotizardelete.defaults.controller = "cotizar"
+resources.router.routes.cotizardelete.defaults.action = "delete"
+
 resources.router.routes.solucionesDetalle.route = "soluciones/detalle-solucion/:slugSolucion"
 resources.router.routes.solucionesDetalle.defaults.module = "default"
 resources.router.routes.solucionesDetalle.defaults.controller = "soluciones"
