--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -152,8 +152,8 @@ resources.multidb.db.charset = "utf8"
 resources.multidb.db.default = true 
 
 resources.frontController.params.displayExceptions = 1
-resources.CST_Application_Resource_Server.urlStatic = http://local.iteraz.com/static
-resources.CST_Application_Resource_Server.urlStaticAdmin = http://local.iteraz.com/administrador/static
-resources.CST_Application_Resource_Server.urlDinamic = http://local.iteraz.com/dinamic
-resources.CST_Application_Resource_Server.baseUrl = http://local.iteraz.com
+resources.CST_Application_Resource_Server.urlStatic = http://local.itera.com/static
+resources.CST_Application_Resource_Server.urlStaticAdmin = http://local.itera.com/administrador/static
+resources.CST_Application_Resource_Server.urlDinamic = http://local.itera.com/dinamic
+resources.CST_Application_Resource_Server.baseUrl = http://local.itera.com
 
