--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -27,6 +27,9 @@ resources.multidb.db.password=""
 resources.multidb.db.dbname="itera"
 resources.multidb.db.charset = "utf8"
 resources.multidb.db.default = true 
+resources.multidb.db.default = true 
+resources.multidb.db.profiler.class = "Zend_Db_Profiler_Firebug"
+
 
 ;layout
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts"
@@ -150,10 +153,13 @@ resources.multidb.db.password=""
 resources.multidb.db.dbname="itera"
 resources.multidb.db.charset = "utf8"
 resources.multidb.db.default = true 
+resources.multidb.db.profiler.enabled = true 
+resources.multidb.db.profiler.class = "Zend_Db_Profiler_Firebug"
+
 
 resources.frontController.params.displayExceptions = 1
-resources.CST_Application_Resource_Server.urlStatic = http://local.itera.com/static
-resources.CST_Application_Resource_Server.urlStaticAdmin = http://local.itera.com/administrador/static
-resources.CST_Application_Resource_Server.urlDinamic = http://local.itera.com/dinamic
-resources.CST_Application_Resource_Server.baseUrl = http://local.itera.com
+resources.CST_Application_Resource_Server.urlStatic = http://local.iteraz.com/static
+resources.CST_Application_Resource_Server.urlStaticAdmin = http://local.iteraz.com/administrador/static
+resources.CST_Application_Resource_Server.urlDinamic = http://local.iteraz.com/dinamic
+resources.CST_Application_Resource_Server.baseUrl = http://local.iteraz.com
 
