--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 copy.src.files=false
-copy.src.target=C:\\root\\F:\\sistemas\\Nueva Carpeta (2)\\IteraZend
+copy.src.target=/root/C:\\root\\F:\\sistemas\\Nueva Carpeta (2)\\IteraZend
 run.as=LOCAL
-url=http://local.iteraz.com
+url=http://www.local.itera.com
